[package]
name = "ipcanvas-ping-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
std = []
user = ["aya", "std"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
