[package]
name = "ipcanvas-ping-ebpf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ipcanvas-ping-common = { path = "../ipcanvas-ping-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ipcanvas-ping"
path = "src/main.rs"
